<resources>
    <string name="app_name">Endlini</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="agree">
         I hereby cerfy that all the informaon provided is correct and I authorise  Endlini to use the informaon contained herein to register my name under their scheme to the selected       town, including other facilies provided by Endlini.

    </string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_user_account">UserAccount</string>
    <string name="title_activity_menu">Menu</string>

    <string name="feedback_input">Feedback</string>
    <string name="name_input">Name</string>
    <string name="surname_input_hint">Enter your Surname</string>
    <string name="surname_input">Surname</string>
    <string name="password_input">Password</string>
    <string name="email_input">Email</string>
    <string name="sign_up">Sign Up</string>

    <string name="feedback_input_hint">Enter your feedback</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="password_input_hint">Enter your password</string>
    <string name="email_input_hint">Enter your email</string>
    <string name="get_user_details_description">Please put all the required details below .</string>
    <string name="dob">Date of Birth (DD-MM-YY)</string>
    <string name="dob_hint">Enter Date of Birth.</string>
    <string name="Save">Save</string>
    <string name="save_details">Save Details</string>
    <string name="phone_input">Phone Number.</string>
    <string name="phone_input_hint">(263)700 00 00</string>
    <string name="log_in">Log in</string>


    <string name="facebook_app_id">610291686041119</string>
    <string name="client_secrete">LtHqHOGBq6SJr_CaROi_N11C</string>
    <string name="fb_login_protocol_scheme">fb610291686041119</string>
    <string name="client_id">140161996658-4ve3fcdon895v6jn9kq910n4vuciesd5.apps.googleusercontent.com</string>
    <string name="title_activity_sm_slogin">SmSLoginActivity</string>

</resources>
